# safe-learning

./: .gitignore  LICENSE  README.md  euler_guide.md  pyproject.toml  train_brax.py
.github/workflows/: ci.yaml
franka_experiments/: ppo_vision_flax_to_onnx.py  train_pick_cartesian_vision_ppo.py
ss2r/algorithms/: penalizers.py
ss2r/algorithms/awac_mpc/: __init__.py  losses.py  train.py
ss2r/algorithms/hydrax_mpc/: __init__.py  controller.py  factory.py  render.py  task.py  train.py  tree_mpc.py
ss2r/algorithms/mbpo/: __init__.py  non_episodic_training_step.py  on_policy_training_step.py  safety_filters.py  train.py  training_step.py  types.py
ss2r/algorithms/mpc/: __init__.py  tree_mpc.py
ss2r/algorithms/ppo/: __init__.py  franka_ppo_to_onnx.py
ss2r/algorithms/sac/: __init__.py  data.py  go1_sac_to_onnx.py  q_transforms.py  rae.py  train.py
ss2r/algorithms/sbsrl/: __init__.py  losses.py  model_env.py  networks.py  on_policy_training_step.py  q_transforms.py  safety_filters.py  train.py  types.py  vision_networks.py
ss2r/algorithms/td3/: __init__.py  losses.py  networks.py  train.py  types.py  vision_networks.py
ss2r/benchmark_suites/: __init__.py  wrappers.py
ss2r/benchmark_suites/mujoco_playground/: __init__.py
ss2r/benchmark_suites/rccar/: model.py  rccar.py
ss2r/benchmark_suites/safety_gym/: go_to_goal.py
ss2r/configs/: train_brax.yaml
ss2r/configs/agent/: awac_mpc.yaml  hydrax_mpc.yaml  mbpo.yaml  sac.yaml  sbsrl.yaml  td3.yaml
ss2r/configs/environment/: g1_joystick.yaml  g1_mocap_tracking.yaml  h1_mocap_tracking.yaml  humanoid_getup.yaml  nonepisodic_humanoid.yaml  pendulum_swingup.yaml  rccar_real.yaml
ss2r/configs/experiment/: cartpole_swingup_awac_mpc.yaml  cartpole_swingup_collect_offline.yaml  cartpole_swingup_mbpo.yaml  cartpole_swingup_mbpo_actsafe.yaml  cartpole_swingup_mbpo_lagrangian.yaml  cartpole_swingup_mbpo_offline.yaml  cartpole_swingup_mbpo_sooper_lbsgd.yaml  cartpole_swingup_mpc.yaml  cartpole_swingup_sac_nonepisodic.yaml  cartpole_swingup_sbsrl.yaml  cartpole_swingup_sbsrl_lagrangian.yaml  cartpole_swingup_simple.yaml  cartpole_swingup_simple_collect.yaml  cartpole_swingup_simple_sbsrl.yaml  cartpole_swingup_simple_sbsrl_offline.yaml  cartpole_swingup_sparse_sbsrl.yaml  (+61 more)
ss2r/rl/: evaluation.py
(+153 files in other folders)
