[project]
name = "ss2r"
version = "0.1.0"
description = ""
authors = [{ name = "Yarden", email = "yarden.as@inf.ethz.ch" }]
requires-python = ">=3.11.6,<4"
readme = "README.md"
dependencies = [
    "mujoco==3.3.0",
    "mujoco-mjx==3.2.7",
    "jax[cuda12]==0.4.34",
    "hydra-core>=1.3.2,<2",
    "hydra-submitit-launcher>=1.2.0,<2",
    "tabulate>=0.9.0,<0.10",
    "nvidia-cublas-cu12==12.9.0.13",
    "moviepy==1.0.3",
    "imageio>=2.37.0,<3",
    "brax",
    "playground",
    "nvidia-cuda-nvrtc-cu12>=12.9.86,<13",
    "matplotlib>=3.10.3,<4",
]

[dependency-groups]
dev = [
    "mypy>=1.7.0,<2",
    "pre-commit>=3.5.0,<4",
    "types-tabulate>=0.9.0.20240106,<0.10",
    "seaborn>=0.13.2,<0.14",
    "ipykernel>=6.29.4,<7",
    "tueplots>=0.0.17,<0.0.18",
    "ruff>=0.9.6,<0.10",
]
wandb = ["wandb>=0.16.4,<0.17"]
hydra-submitit = ["hydra-submitit-launcher>=1.2.0,<2"]
onnx = [
    "tf2onnx>=1.16.1,<2",
    "onnxruntime>=1.20.1,<2",
    "keras>=2.13.1",
    "pyzmq>=27.0.0,<28",
    "tensorflow-cpu==2.17.1",
]

[tool.uv]
default-groups = ["dev", "wandb", "onnx"]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
brax = { git = "https://github.com/Andrew-Luo1/brax.git", rev = "bc_checkpointing" }
playground = { git = "https://github.com/Andrew-Luo1/mujoco_playground_new.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
ignore = ["E731"]
exclude = [
    "papers",         # Exclude the papers folder
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
show_column_numbers = true
disallow_untyped_defs = false
disallow_subclassing_any = false
disallow_untyped_calls = false
strict_optional = true
exclude = ["./papers"]
